# rayforge

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONVENTIONS.md  GEMINI.md  README.md  com.barebaric.rayforge.yml  conftest.py  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt
data/: com.barebaric.rayforge.desktop  com.barebaric.rayforge.metainfo.xml  org.rayforge.rayforge.metainfo.xml  rayforge.desktop
debian/: changelog  control  copyright  lintian-overrides  postinst  postrm  requirements-bundle.txt  rules
dev/: 404.html  index.html  sitemap.xml
docs/: README.md  architecture.md  concepts.md  debug.md  development.md  docmodel.md  documentation-plan.md  driver.md  pipeline.md  user-docs-site.md  website.md
docs-site/: README.md  documentation-plan.md  index.md
flatpak/: README.md  build-flatpak.sh  com.barebaric.rayforge.yml  org.rayforge.rayforge.yml  python3-agg.json  python3-meson-python.json  python3-openblas.json  python3-potrace.json  python3-pybind11.json  python3-pypotrace.yml  python3-pythran.json  python3-requirements.json  python3-requirements.yaml  python3-requirements.yml  python3-scikit-build.json  python3-setuptools-git-versioning.json  python3-setuptools.yml  python3-vips.json
pylaser/: canvas.py  draglist.py  gcode.py  groupbox.py  image.py  pathdom.py  processor.py  render.py  ui.py  workarea.py
rayforge/: actions.py  app.py  asyncloop.py  axiswidget.py  canvas.py  config.py  depth.md  draglist.py  gcode.py  groupbox.py  groupwidget.py  icons.py  machinesettings.py  main_menu.py  mainwindow.py  models.py  (+16 more)
(+867 files in other folders)
