[project]
name = "rayforge"
dynamic = ["version"]
authors = [
  { name="Samuel Abels", email="knipknap@gmail.com" },
]
description = "A desktop application for laser cutting and engraving"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
]

[project.urls]
"Homepage" = "https://github.com/barebaric/rayforce"
"Bug Tracker" = "https://github.com/barebaric/rayforce/issues"

[project.scripts]
rayforge = "scripts.rayforge:main"

[build-system]
requires = [
  "setuptools >= 40.9.0", "setuptools-git-versioning"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.data-files]
"share/applications" = ["data/rayforge.desktop"]
"share/icons/hicolor/scalable/apps" = ["data/rayforge.svg"]
